Cleanup (warnings; formatting)
GitOrigin-RevId: 2dde3ae8b34b3ae72d53803bffc0faee5f44b965